# memista

./: .gitignore  BUILD_REQUIREMENTS.md  CHANGELOG.md  Cargo.toml  README.md  UPDATES_SUMMARY.md  sample.env
benchmarks/: README.md  concurrent_benchmark.sh  insert_benchmark.sh  run_all_benchmarks.sh  search_benchmark.sh
config/: default.env
documentation/: mkdocs.yml
documentation/docs/: changelog.md  index.md
documentation/docs/api/: endpoints.md  index.md  openapi.md  request-response.md
documentation/docs/benchmarking/: index.md  interpreting-results.md  running-benchmarks.md
documentation/docs/examples/: advanced-usage.md  basic-usage.md  http-client.md  index.md  library-usage.md
documentation/docs/getting-started/: index.md  installation.md  quickstart.md  requirements.md
documentation/docs/guide/: configuration.md  http-server.md  index.md  library-usage.md
documentation/docs/reference/: data-structures.md  error-codes.md  index.md
examples/: README.md  advanced_usage.rs  basic_usage.rs  http_client.rs  library_usage.rs
scripts/: setup.sh  test_functionality.sh
src/: lib.rs  main.rs
tests/integration/: api_tests.rs
